добавил регистрацию авторизацию
